[gd_scene load_steps=13 format=2]

[ext_resource path="res://art/Fonts/Courgette-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://art/Finished/Buttons/pause.png" type="Texture" id=2]
[ext_resource path="res://art/Finished/Buttons/play.png" type="Texture" id=3]
[ext_resource path="res://Menu.gd" type="Script" id=4]
[ext_resource path="res://art/Finished/Player/dark_white_skin/middle.png" type="Texture" id=5]
[ext_resource path="res://art/Finished/Player/middle_skin/middle.png" type="Texture" id=6]
[ext_resource path="res://art/Finished/Player/light_black_skin/middle.png" type="Texture" id=7]
[ext_resource path="res://art/Finished/Player/light_white_skin/middle.png" type="Texture" id=8]
[ext_resource path="res://art/Finished/Player/dark_black_skin/middle.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Pause" type="TouchScreenButton" parent="."]
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 2 )

[node name="Resume" type="TouchScreenButton" parent="."]
pause_mode = 2
scale = Vector2( 0.25, 0.25 )
normal = ExtResource( 3 )

[node name="Start" type="Button" parent="."]
anchor_top = 0.668
anchor_right = 1.0
anchor_bottom = 0.668
margin_left = 72.0
margin_top = -13.76
margin_right = -60.0
margin_bottom = 13.24
custom_fonts/font = SubResource( 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
margin_left = 8.0
margin_top = 88.0
margin_right = 168.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.678431, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Relaxing River"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterSelector" type="Button" parent="."]
pause_mode = 2
anchor_top = 0.847
anchor_right = 1.0
anchor_bottom = 0.847
margin_left = 19.3719
margin_top = -13.7954
margin_right = -16.6281
margin_bottom = 13.2046
custom_fonts/font = SubResource( 3 )
text = "Character Selector"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterSelectContainer" type="HBoxContainer" parent="."]
pause_mode = 2
margin_top = 251.0
margin_right = 180.0
margin_bottom = 291.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="DarkBlack" type="TouchScreenButton" parent="CharacterSelectContainer"]
position = Vector2( -0.15749, 4.84253 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 9 )

[node name="LightBlack" type="TouchScreenButton" parent="CharacterSelectContainer"]
position = Vector2( 40.315, 4.81271 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 7 )

[node name="Middle" type="TouchScreenButton" parent="CharacterSelectContainer"]
position = Vector2( 78.0197, 4.47739 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 6 )

[node name="DarkWhite" type="TouchScreenButton" parent="CharacterSelectContainer"]
position = Vector2( 114.443, 4.6413 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 5 )

[node name="LightWhite" type="TouchScreenButton" parent="CharacterSelectContainer"]
position = Vector2( 147.948, 5.02982 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 8 )
[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CharacterSelector" to="." method="_on_CharacterSelector_pressed"]
[connection signal="pressed" from="CharacterSelectContainer/DarkBlack" to="." method="_on_DarkBlack_pressed"]
[connection signal="pressed" from="CharacterSelectContainer/LightBlack" to="." method="_on_LightBlack_pressed"]
[connection signal="pressed" from="CharacterSelectContainer/Middle" to="." method="_on_Middle_pressed"]
[connection signal="pressed" from="CharacterSelectContainer/DarkWhite" to="." method="_on_DarkWhite_pressed"]
[connection signal="pressed" from="CharacterSelectContainer/LightWhite" to="." method="_on_LightWhite_pressed"]
